--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -116,6 +116,21 @@
 				android:layout_weight="1" />
 			-->
 		</LinearLayout>
+		
+		<LinearLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:gravity="fill_horizontal">
+			
+			<Button
+				android:id="@+id/button_convert"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/button_convert" />
+			
+		</LinearLayout>
+		
 	</LinearLayout>
 		
 	<TextView
